Fix compile error by action